first stage of css

--- a/index.html
+++ b/index.html
@@ -1,13 +1,46 @@
-<!DOCTYPE html>ELLO
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors Project</title>
     <link rel="stylesheet" href="style.css">
+    <script src="main.js" defer></script>
+    <link href="https://fonts.cdnfonts.com/css/dk-cool-crayon" rel="stylesheet">
+    <style>
+        @import url('https://fonts.cdnfonts.com/css/dk-cool-crayon');
+    </style>
 </head>
 <body>
-    <h1>HELLO</h1>
-    <script src="main.js"></script>
+    <div class="header-container">
+        <p>
+            ROCK PAPER SCISSORS
+        </p>
+    </div>
+    <div class="middle-container">
+        Who will prevail in this life-long, time classic marvel of a game?
+        <p>
+            The <strong>HUMAN</strong> or the <strong>ROBOT</strong>?
+        </p>
+    </div>
+    <div class="lower-container">
+        <div class="best-of-five">
+            Best of 5 wins.
+        </div>
+        <div class="choose">
+            Choose your crayon weapon.
+        </div>
+    </div>
+    <div class="choices-container">
+        <div class="rock-container">
+            <img src="./images/rock.png" alt="rock-image">
+        </div>
+        <div class="paper-container">
+            <img src="./images/paper.png" alt="paper-image">
+        </div>
+        <div class="scissors-container">
+            <img src="./images/scissors.png" alt="scissors-image">
+        </div>
+    </div>
 </body>
 </html>
