--- a/index.html
+++ b/index.html
@@ -18,14 +18,16 @@
         </p>
     </div>
     <div class="middle-container">
-        Who will prevail in this life-long, time classic marvel of a game?
-        <p>
-            The <strong>HUMAN</strong> or the <strong>ROBOT</strong>?
-        </p>
+        <em>
+            Who will prevail in this life-long, time classic marvel of a game?
+            <p>
+                The <strong>HUMAN</strong> or the <strong>ROBOT</strong>?
+            </p>
+        </em>
     </div>
     <div class="lower-container">
         <div class="best-of-five">
-            Best of 5 wins.
+            Best of 5 <span class="wins">wins</span>.
         </div>
         <div class="choose">
             Choose your crayon weapon.
@@ -33,13 +35,34 @@
     </div>
     <div class="choices-container">
         <div class="rock-container">
-            <img src="./images/rock.png" alt="rock-image">
+            <b>
+                <img src="./images/rock.png" alt="rock-image">
+            </b>
         </div>
         <div class="paper-container">
-            <img src="./images/paper.png" alt="paper-image">
+            <b>
+                <img src="./images/paper.png" alt="paper-image">
+            </b>
         </div>
         <div class="scissors-container">
-            <img src="./images/scissors.png" alt="scissors-image">
+            <b>
+                <img src="./images/scissors.png" alt="scissors-image">
+            </b>
+        </div>
+    </div>
+    <div class="bottom-container">
+        <span class="score">Score:</span>
+        <div class="players-container">
+            <div class="you">
+                <strong>
+                    YOU: 0
+                </strong>
+            </div>
+            <div class="robot">
+                <strong>
+                    ROBOT: 0
+                </strong>
+            </div>
         </div>
     </div>
 </body>
