html text change

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </div>
     <div class="middle-container">
         <em>
-            Who will prevail in this life-long, time classic marvel of a game?
+            Who will prevail in this lifelong, timeless classic and a marvel of a game?
             <p>
                 The <strong>HUMAN</strong> or the <strong>ROBOT</strong>?
             </p>
