visible scoring added

--- a/index.html
+++ b/index.html
@@ -36,17 +36,17 @@
     <div class="choices-container">
         <div class="rock-container">
             <b>
-                <img src="./images/rock.png" alt="rock-image">
+                <img id="rock-choice" src="./images/rock.png" alt="rock-image">
             </b>
         </div>
         <div class="paper-container">
             <b>
-                <img src="./images/paper.png" alt="paper-image">
+                <img id="paper-choice" src="./images/paper.png" alt="paper-image">
             </b>
         </div>
         <div class="scissors-container">
             <b>
-                <img src="./images/scissors.png" alt="scissors-image">
+                <img id="scissors-choice" src="./images/scissors.png" alt="scissors-image">
             </b>
         </div>
     </div>
@@ -55,12 +55,12 @@
         <div class="players-container">
             <div class="you">
                 <strong>
-                    YOU: 0
+                    YOU: <span class="player-score">0</span>
                 </strong>
             </div>
             <div class="robot">
                 <strong>
-                    ROBOT: 0
+                    ROBOT: <span class="computer-score">0</span>
                 </strong>
             </div>
         </div>
