--- a/index.html
+++ b/index.html
@@ -35,19 +35,13 @@
     </div>
     <div class="choices-container">
         <div class="rock-container">
-            <b>
                 <img id="rock-choice" src="./images/rock.png" alt="rock-image">
-            </b>
         </div>
         <div class="paper-container">
-            <b>
                 <img id="paper-choice" src="./images/paper.png" alt="paper-image">
-            </b>
         </div>
         <div class="scissors-container">
-            <b>
                 <img id="scissors-choice" src="./images/scissors.png" alt="scissors-image">
-            </b>
         </div>
     </div>
     <div class="bottom-container">
@@ -64,6 +58,9 @@
                 </strong>
             </div>
         </div>
+    </div>
+    <div class="footer">
+        <a href="https://github.com/dimsito1" target="_blank">Copyright @dimsito1</a>
     </div>
 </body>
 </html>
